--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^2.0.6",
     "@chakra-ui/react": "^2.2.6",
     "chakra-react-select": "^4.1.4",
+    "framer-motion": "^7.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
