--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.6",
     "@chakra-ui/react": "^2.2.6",
+    "@emotion/styled": "^11.10.4",
     "chakra-react-select": "^4.1.4",
     "framer-motion": "^7.2.1",
     "next": "12.2.4",
